# atlas

./: .env.example  .gitignore  DESIGN.md  PROJECT_MEMORY.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  railway.json
apps/api/: pyproject.toml
apps/api/scripts/: backfill_fx_history.py  backfill_fx_real.py  backfill_news.py  backfill_news_v2.py  download_models.sh  ingest_debt_profiles.py  process_news.py  rescore_and_backfill_civ.py  run_ingestion.py  seed_countries.py  seed_debt_profiles.py  seed_demo_user.py  seed_fx_history.py  seed_fx_intelligence.py  seed_phase2a.py  seed_synopses.py  seed_trade.py
apps/api/src/atlas_api/: config.py  db.py  deps.py  logging_config.py  main.py  models.py  security.py
apps/api/src/atlas_api/ingestion/: base.py  circuit_breaker.py  cli.py  comtrade.py  comtrade_run.py  fx.py  imf.py  orchestrator.py  ratings.py  reer.py  reer_run.py  scheduler.py  worldbank.py
apps/api/src/atlas_api/routers/: fx.py  (+8 more)
apps/api/tests/: conftest.py  test_ai_news_scorer.py  test_ai_provider.py  test_ai_synopsis.py  test_auth.py  test_auth_logout.py  test_bundle_endpoint.py  test_bundle_service.py  test_composite_rating.py  test_config_validation.py  test_countries.py  test_e2e_ingestion.py  test_health.py  test_ingestion_base.py  test_ingestion_fx.py  test_ingestion_imf.py  test_ingestion_ratings.py  test_ingestion_worldbank.py  test_iso3_validation.py  test_news_dedup.py  test_news_embeddings.py  test_news_endpoints.py  test_news_gdelt.py  test_news_heuristic_scorer.py  test_news_nlp.py  test_news_rss.py  test_news_semantic_dedup.py  test_orchestrator.py  test_pod.py  test_read_paths.py  test_reer_ingest.py  test_risk_score.py  test_scenario_endpoints.py  test_scenario_engine.py  test_scheduler.py  test_security.py  test_staleness.py  test_synopsis_endpoints.py
(+124 files in other folders)
