[project]
name = "atlas-api"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "argon2-cffi>=23.1",
  "python-jose[cryptography]>=3.3",
  "atlas-schemas",
  "httpx>=0.27",
  "apscheduler>=3.10",
  "tenacity>=9.0",
  "structlog>=24.4",
  "fastembed>=0.4",
  "spacy>=3.7",
  "feedparser>=6.0",
  "pgvector>=0.3",
  "anthropic>=0.39",
  "playwright>=1.45",
  "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "testcontainers[postgres]>=4.8",
  "ruff>=0.6",
  "mypy>=1.11",
  "types-python-jose>=3.3",
  "pytest-httpx>=0.32",
  "freezegun>=1.5",
]

[tool.uv.sources]
atlas-schemas = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atlas_api"]
